--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emailjs/browser": "^4.4.1",
     "@types/react-syntax-highlighter": "^15.5.13",
     "framer-motion": "^12.25.0",
     "lucide-react": "^0.562.0",
